--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,22 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-button color="danger" (click)="doSomething">Prueba</ion-button>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-label>Antes de la lista</ion-label>
+  <ion-list>
+    <ion-item *ngFor="let user of this.prueba | async">
+    <ion-label >
+      {{user.username}}
+    </ion-label >
+    </ion-item>
+  </ion-list>
+  <ion-label>Despues de la lista</ion-label>
 
-  <button class="btn btn-primary" (click)="doSomething()">Boton</button>
 </ion-content>
