--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,16 +7,16 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-button color="danger" (click)="doSomething">Prueba</ion-button>
+  <ion-button color="danger" (click)="doSomething()">Prueba</ion-button>
 
   <ion-label>Antes de la lista</ion-label>
   <ion-list>
-    <ion-item *ngFor="let user of this.prueba | async">
+    <ion-item *ngFor="let user of this.usuarios">
     <ion-label >
       {{user.username}}
     </ion-label >
     </ion-item>
   </ion-list>
-  <ion-label>Despues de la lista</ion-label>
+  <ion-label>{{texto}}</ion-label>
 
 </ion-content>
