--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,9 +11,9 @@
 
   <ion-label>Antes de la lista</ion-label>
   <ion-list>
-    <ion-item *ngFor="let user of this.usuarios">
+    <ion-item *ngFor="let gasStation of this.gasStations">
     <ion-label >
-      {{user.username}}
+      {{gasStation.name}}
     </ion-label >
     </ion-item>
   </ion-list>
