--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,18 +1,16 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Home
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-list>
-    <ion-item *ngFor="let gasStation of this.gasStations">
-      <ion-label>
-        {{gasStation.name}}
-      </ion-label>
-    </ion-item>
-  </ion-list>
-
-</ion-content>
+<ion-menu contentId="main-content">
+  <app-header pageName="Home"></app-header>
+  <app-links-header></app-links-header>
+</ion-menu>
+<div class="ion-page" id="main-content">
+  <app-header pageName="Home"></app-header>
+  <ion-content class="ion-padding">
+    <ion-list>
+      <ion-item *ngFor="let gasStation of this.gasStations">
+        <ion-label>
+          {{gasStation.name}}
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</div>
