--- a/src/app/pages/user-registration/user-registration.page.html
+++ b/src/app/pages/user-registration/user-registration.page.html
@@ -1,8 +1,8 @@
 <div class="ion-page" id="main-content">
-  <app-header pageName="Login"></app-header>
+  <app-header pageName="Registration"></app-header>
   <ion-content class="ion-padding">
     <ion-list>
-      Aqui iria el formulario de inicio de sesion
+      Aqui iria el formulario de registro de usuario
     </ion-list>
   </ion-content>
 </div>
