--- a/src/app/general-components/header/header.component.html
+++ b/src/app/general-components/header/header.component.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-button (click)="onClick()">
         <ion-icon slot="icon-only" name="menu"></ion-icon>
