--- a/src/app/general-components/side-menu/side-menu.component.html
+++ b/src/app/general-components/side-menu/side-menu.component.html
@@ -1,6 +1,6 @@
 <ion-menu side="start" menuId="first" contentId="mainContent">
   <ion-header>
-    <ion-toolbar>
+    <ion-toolbar color="primary">
       <ion-title>Menú Principal</ion-title>
     </ion-toolbar>
   </ion-header>
