--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -2,11 +2,12 @@
   <app-header pageName="Home"></app-header>
   <ion-content class="ion-padding">
     <ion-list>
-      <ion-item *ngFor="let gasStation of this.gasStations">
+      <ion-item *ngFor="let gasStation of displayedGasStations">
         <ion-label>
           {{gasStation.name}}
         </ion-label>
       </ion-item>
     </ion-list>
+    <ion-button expand="block" (click)="loadMore()">Cargar más</ion-button>
   </ion-content>
 </div>
