--- a/src/app/general-components/side-menu/side-menu.component.html
+++ b/src/app/general-components/side-menu/side-menu.component.html
@@ -4,9 +4,30 @@
       <ion-title>Menú Principal</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-content>
-    <ion-list *ngFor="let link of links" (click)="goToPage(link.url)">
-      {{link.name}}
+  <ion-content id="contenidoSideMenu">
+    <ion-list class="ion-padding">
+      <ion-item *ngFor="let link of links" (click)="goToPage(link.url)">
+        {{link.name}}
+      </ion-item>
     </ion-list>
+
+    <ion-list *ngIf="this.currentUser!==undefined" class="ion-text-center">
+      <ion-item>
+        <ion-img src="{{photo}}" height="519" width="516" class="ion-border-radius" ></ion-img>
+      </ion-item>
+      <ion-item class="ion-text-center">
+        <ion-button (click)="logout()">
+          LogOut
+        </ion-button>
+      </ion-item>
+    </ion-list>
+
+
+    <ion-item class="ion-text-center" *ngIf="this.currentUser===undefined">
+      <ion-button (click)="goToPage('/login')">
+        Login
+      </ion-button>
+    </ion-item>
+
   </ion-content>
 </ion-menu>
