Change to new SQLite Library for Capacitor.

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -2,7 +2,7 @@
   <app-header pageName="Home"></app-header>
   <ion-content class="ion-padding">
     <ion-list>
-      <ion-item id="gasStationItem" *ngFor="let gasStation of displayedGasStations">
+      <ion-item button="true" id="gasStationItem" *ngFor="let gasStation of displayedGasStations" (click)="openGasStation(gasStation)">
         <ion-title>
           {{gasStation.name}}
         </ion-title>
