user registration implementation

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -15,7 +15,10 @@
             <ion-input label="Contraseña" class="custom-input" labelPlacement="floating" formControlName="password" type="password"></ion-input>
 
             <div class="ion-text-center ion-margin-top">
-              <ion-button type="submit"> <strong>Iniciar Sesión</strong></ion-button>
+              <ion-button type="submit" class="ion-margin-top">Iniciar Sesión</ion-button>
+              <ion-item class="ion-text-center">
+                <ion-label routerLink="/registration" color="primary">Crea tu cuenta aqui</ion-label>
+              </ion-item>
             </div>
         </form>
       </ion-card-content>
