--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -30,3 +30,14 @@
   display: flex;
   flex-direction: column;
 }
+#gasStationItem ion-title {
+  font-size: 20px;
+  line-height: 26px;
+}
+
+#gasStationItem ion-text {
+  font-size: 16px;
+  line-height: 20px;
+  color: #8c8c8c;
+  margin-top: 4px;
+}
