--- a/src/app/pages/edit-user/edit-user.page.html
+++ b/src/app/pages/edit-user/edit-user.page.html
@@ -1,28 +1,33 @@
 <div class="ion-page" id="main-content">
-  <app-header pageName="Login"></app-header>
+  <app-header pageName="Registration"></app-header>
   <ion-content class="ion-padding">
-
     <ion-card>
-      <ion-card-header color="primary">
-        <ion-card-title class="ion-text-center">
-          <strong>Inicia Sesión</strong>
-        </ion-card-title>
+      <ion-card-header>
+        <ion-card-title class="ion-text-center"> Registrate </ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <form [formGroup]="formularioEditUser" (ngSubmit)="editUser()">
-            <ion-input label="Correo Electronico" class="custom-input" labelPlacement="floating" formControlName="email" [disabled]="true"></ion-input>
+        <form [formGroup]="formularioActualizarUsuario" (ngSubmit)="updateUser()">
+          <ion-input
+            label="Nombre de usuario"
+            labelPlacement="floating"
+            formControlName="username"
+          ></ion-input>
 
-            <ion-input label="Nombre de Usuario" class="custom-input" labelPlacement="floating" formControlName="username" type="text"></ion-input>
+          <ion-input
+            label="Correo Electronico"
+            labelPlacement="floating"
+            formControlName="email"
+            [disabled]="true"
+          ></ion-input>
 
-            <input type="file" (change)="uploadFile($event)">
+          <input id="uploadBtn" type="file" class="upload" (change)="uploadFile($event.target)">
 
-            <div class="ion-text-center ion-margin-top">
-              <ion-button type="submit" class="ion-margin-top">Actualiza tu perfil</ion-button>
-
-            </div>
+          <div class="ion-text-center ion-margin-top">
+            <ion-button type="submit">Registrate</ion-button>
+          </div>
         </form>
       </ion-card-content>
     </ion-card>
-
   </ion-content>
 </div>
+
