--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -15,14 +15,13 @@
             <ion-input label="Contraseña" class="custom-input" labelPlacement="floating" formControlName="password" type="password"></ion-input>
 
             <div class="ion-text-center ion-margin-top">
-              <ion-button type="submit" class="ion-margin-top">Iniciar Sesión</ion-button>
-              <ion-item class="ion-text-center">
+              <ion-button type="submit" class="ion-margin-top ion-margin-bottom">Iniciar Sesión</ion-button>
+              <div class="ion-text-center ion-margin-top ion-margin-bottom">
                 <ion-label routerLink="/registration" color="primary">Crea tu cuenta aqui</ion-label>
-              </ion-item>
+              </div>
             </div>
         </form>
       </ion-card-content>
     </ion-card>
-
   </ion-content>
 </div>
