--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -11,6 +11,6 @@
         </ion-text>
       </ion-item>
     </ion-list>
-    <ion-button expand="block" (click)="loadMore()">Cargar más</ion-button>
+    <ion-button expand="block" (click)="loadMore()"><strong>Cargar más</strong></ion-button>
   </ion-content>
 </div>
